package eapli.base.tipoequipa.repositories;

import eapli.base.equipa.domain.CodigoUnico;
import eapli.base.tipoequipa.domain.TipoEquipa;
import eapli.framework.domain.repositories.DomainRepository;


public interface TipoEquipaRepository extends DomainRepository<CodigoUnico, TipoEquipa>{

}
